--- a/lib/dune
+++ b/lib/dune
@@ -1,7 +1,7 @@
 (library
  (name dust)
  (public_name dust)
- (modules max_heap complete_btree finger_tree)
+ (modules binary_search_tree ) 
  (inline_tests)
  (preprocess (pps ppx_expect ppx_inline_test))
  )
